# vlink

./: .gitignore  Cargo.toml  README.md  log4rs.yaml
.run/: Run vlinkd.run.xml
core/: Cargo.toml  build.rs
core/abi/: common.proto  to_client.proto  to_server.proto
core/src/: base64.rs  generated_serial_number.rs  lib.rs
core/src/proto/: mod.rs
core/src/proto/pb/: abi.rs
derp/frp-client/: Cargo.toml  README.md
derp/frp-client/src/: buf_crypto.rs  conn_control.rs  errors.rs  frp_codec.rs  frp_control.rs  lib.rs  msg.rs  service.rs
derp/tailscale-derp/: Cargo.toml  README.md
derp/tailscale-derp/src/: derp_client.rs  derp_codec.rs  derp_utils.rs  errors.rs  lib.rs  ssl.rs  test_nacl.rs
derp/vlink-derp-server/: Cargo.toml
derp/vlink-derp-server/src/: main.rs
examples/stub/: Cargo.toml
examples/stub/src/: main.rs
examples/wg-cli/: Cargo.toml
examples/wg-cli/examples/: main2.rs  test_tun.rs
examples/wg-cli/src/: main.rs
examples/wireguard-to-wiretun/tester/src/: main.rs
headlink/: Cargo.toml
headlink/src/: client.rs  client_handler.rs  lib.rs  main.rs  network.rs  peer.rs  server.rs
headlink/src/api/: mod.rs  router.rs  state.rs
headlink/src/api/controller/: mod.rs
headlink/src/client/: dispatcher.rs  error.rs
headlink/src/client/handler/: dev_handshake_complete.rs  helpers.rs  mod.rs  peer_enter.rs  peer_forward.rs  peer_leave.rs  req_config.rs  update_extra_endpoint.rs
headlink/src/db/: init.rs  mod.rs  snowflake.rs
headlink/src/db/entity/: config.rs  mod.rs  network.rs  network_token.rs  peer.rs  peer_extra_transport.rs  prelude.rs
headlink/src/db/entity/network/: type_cidr.rs
headlink/src/db/entity/test/: mod.rs  network.rs  prelude.rs
vlink/: Cargo.toml
vlink-core/: Cargo.toml  build.rs
vlink-core/abi/: common.proto  to_client.proto  to_server.proto
vlink-core/src/: base64.rs  generated_serial_number.rs  lib.rs  rw_map.rs  secret.rs
vlink-core/src/proto/: mod.rs
vlink-core/src/proto/pb/: abi.rs  mod.rs
vlink-core/src/utils/: mod.rs  network.rs
vlink-tun/: Cargo.toml
vlink-tun/examples/: config.toml  config1.toml  test_channel.rs  test_create_tun.rs  test_tun_1.rs
vlink-tun/src/: lib.rs
vlink-tun/src/device/: config.rs  handle.rs  inbound.rs  metrics.rs  mod.rs  rate_limiter.rs
vlink-tun/src/device/cipher/: aead_chacha20_cipher.rs  chacha20_poly1305_cipher.rs  mod.rs
vlink-tun/src/device/endpoint/: mod.rs
vlink-tun/src/device/event/: mod.rs
vlink-tun/src/device/peer/: cidr.rs  handler.rs  inbound.rs  mod.rs  monitor.rs  peers.rs  session.rs
vlink-tun/src/device/transport/: mod.rs  udp.rs
vlink-tun/src/noise/handshake/: cookie.rs
vlink-tun/src/router/: darwin.rs  linux.rs  mod.rs  windows.rs
vlink-tun/src/tun/: error.rs  mod.rs
vlink-tun/src/tun/linux/: sys.rs  tun.rs
vlink-tun/src/tun/macos/: sys.rs  tun.rs
vlink-tun/src/tun/unix/: mod.rs
vlink-tun/src/tun/windows/: device.rs  mod.rs  netsh.rs  tap.rs
vlink-tun/src/tun/windows/tun/: mod.rs  packet.rs  wintun_log.rs
vlink/src/: main.rs
vlinkd/: Cargo.toml
vlinkd/examples/: test1.rs
vlinkd/src/: client.rs  config.rs  connect.rs  error.rs  lib.rs  main.rs  network.rs  storage.rs  test_route.rs
vlinkd/src/api/: mod.rs  network.rs  state.rs
vlinkd/src/forward/: mod.rs  tcp2udp.rs  udp2udp.rs
vlinkd/src/handler/: common.rs  connected.rs  first_connected.rs  mod.rs
vlinkd/src/network/: cmd_handler.rs  config.rs  ctrl.rs  device_handler.rs  extra_transport.rs  mod.rs  types.rs
vlinkd/src/transport/: dynamic_ip.rs  ext_transport_selector.rs  mod.rs  nat_tcp.rs  nat_udp.rs  tcp.rs
vlinkd/src/transport/forward/: mod.rs  tcp2udp.rs  udp.rs
vlinkd/src/transport/nat2pub/: mod.rs  nat_service.rs  reuse_socket.rs  upnp_service.rs
vlinkd/src/transport/proto/: ddns.rs  dynamic_ip.rs  mod.rs  nat_tcp.rs  nat_udp.rs  relay_transport.rs  tailscale_derp.rs  websocket.rs
vlinkd/src/transport/sender/: mod.rs  udp_sender.rs
vlinkd/src/utils/: iface.rs  mod.rs
