[workspace]
members = [
    "headlink",
    "vlink-core",
    "derp/vlink-derp-server",
    "derp/frp-client",
    "derp/tailscale-derp", "vlinkd"]
[workspace.dependencies]
crypto_box = "0.9.1"
axum = "0.7.4"
base64 = "0.22.1"
hex = "0.4.3"
tower-http = { version = "^0.5.2", features = ["fs", "catch-panic"] }
once_cell = "1.19.0"
tokio = { version = "1.28.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
log4rs = "1.2.0"
log = "0.4.17"
async-bincode = "0.7.1"
anyhow = "1.0.40"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
async-trait = "0.1.73"
flate2 = "1"
thiserror = "1.0.48"
prost = "0.8" # 处理 protobuf 的代码
futures = "0"
bytes = "1.3.0"
clap = { version = "4.4.6", features = ["derive"] }
axum-extra = "0"
axum-server = "0"
chrono = "0"
mime = "0"
sea-orm = "0"
tap = "1.0.1"
strum = {version = "0.26.1",features = ["derive"]}
#dashmap = "5.5.3"

[profile.release]
strip = true
lto = true
#opt-level = "z"

