[package]
name = "headlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vlink-core = { path = "../vlink-core" }
axum.workspace = true
async-trait = "0.1.73"
tokio = { workspace = true }
tower-http.workspace = true
tap = { workspace = true }
tokio-util = { version = "0.6", features = ["full"] }
log4rs = { workspace = true }
log = { workspace = true }
async-bincode = "0.7.1"
anyhow = "1.0.40"
#dashmap.workspace = true
once_cell = { workspace = true }
flate2 = "1"
thiserror = "1.0.48"
prost = "0.8" # 处理 protobuf 的代码
futures = "0"
bytes = "1.3.0"
clap = { workspace = true }
mime = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sea-query = { version = "0", features = ["with-ipnetwork"] }
sea-query-binder = { version = "0", features = ["with-ipnetwork"] }
sea-orm = { workspace = true, features = ["macros",
    "runtime-tokio-native-tls", "with-chrono", "sqlx-postgres"] }
snowdon = { version = "^0.2", features = ["serde"] }
futures-util = "0.3.30"
ip_network = { features = ["serde", "postgres"] }
ipnetwork = { features = ["serde"] }
[features]
