[package]
name = "vlink-tun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wiretun = { path = "../wiretun" }

libc = "0.2"
nix = { version = "0.27", features = ["fs", "ioctl", "socket"] }
serde = { workspace = true }
socket2 = "0.5"
bytes = "1.5"
regex = "1.9"
rand_core = "0.6"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
futures = "0.3"
async-trait = "0.1"
tokio = { version = "1.32", features = ["full"] }
tokio-util = "0.7"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["reusable_secrets", "static_secrets"] }
blake2 = "0.10"
hmac = "0.12"
ip_network = "0.4"
ip_network_table = "0.2"
base64 = "0.22.0"
log = "0.4.21"
#openssl-sys = "0.9.102"
[dev-dependencies]
#tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.12"
env_logger = "0.11.3"