[package]
name = "stub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wiretun = { path = "../../wiretun", features = ["uapi"] }

async-trait = "0.1"
tokio = { version = "1.27", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
base64 = "0.21"
pnet = "0.33"